[package]
name = "npm-package-json"
description = "A Rust library for parsing npm's `package.json` file."
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SirWindfield/npm-package-json"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
